--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,23 +3,13 @@
     padding: 0;
     margin: 0;
 }
-
+/* Body Style */
 body {
     background-color: #d9dcd6;
 }
 
 body p{
-        font-size: 16px;
-}
-
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
+    font-size: 16px;
 }
 
 /* Header Style */
@@ -71,7 +61,7 @@ body p{
     background-position: center;
 }
 
-/*Style what-we-do section */
+/* Style what-we-do section */
 #what-we-do {
     width: 75%;
     display: inline-block;
@@ -124,7 +114,7 @@ body p{
     max-width: 150px;
 }
 
-/*Footer Style*/
+/* Footer Style */
 .footer {
     padding: 30px;
     clear: both;
@@ -134,4 +124,15 @@ body p{
 
 .footer h2 {
     font-size: 20px;
+}
+
+/* Utility CLasses */
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
 }
